--- a/eCommerce_project/template/listings.html
+++ b/eCommerce_project/template/listings.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 
 {% block content %}
-
+<!--hello-->
 
 <div class=container>
     <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
