--- a/eCommerce_project/template/base.html
+++ b/eCommerce_project/template/base.html
@@ -39,12 +39,13 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Login</a>
                 </li>
                 </ul>
-                <form>
-                <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-                </form>
+                <a class="nav-link " href="{% url 'login' %}" tabindex="-1" aria-disabled="true">LOGIN</a>
+                <a class="nav-link " href="{% url 'register' %}" tabindex="-1" aria-disabled="true">REGISTER</a>
+
+
+
             </div>
             </div>
         </nav>
